re PR middle-end/48836 (internal compiler error: in execute_todo, at passes.c:1261)

PR middle-end/48836
	* ipa-inline-transform.c: Include tree-pass.h
	(inline_transform): Set TODO_update_ssa_only_virtuals.
	* Makefile.in (ipa-inline-transform.o): Add tree-pass.h.

From-SVN: r174970